force-app/main/default/objects/Valitive_Event__c/Valitive_Event__c.object-meta.xml
<CustomObject>
    <label>Valitive Event</label>
    <nameField>
        <displayFormat>VE-{000000}</displayFormat>
        <label>Event</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Valitive Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>