force-app/main/default/objects/Valitive_Event__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Valitive Events</relationshipLabel>
    <relationshipName>Valitive_Events</relationshipName>
    <type>Lookup</type>
</CustomField>