force-app/main/default/objects/Valitive_Event__c/fields/Account_Sync_Errors__c.field-meta.xml
<CustomField>
    <fullName>Account_Sync_Errors__c</fullName>
    <label>Account Sync Errors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>