force-app/main/default/objects/Valitive_Event__c/fields/Additional_Street_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Street_Info__c</fullName>
    <label>Additional Street Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>