force-app/main/default/objects/Valitive_Event__c/fields/Address_Coord__c.field-meta.xml
<CustomField>
    <fullName>Address_Coord__c</fullName>
    <label>Address Coord</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>