force-app/main/default/objects/Valitive_Event__c/fields/Address_Kind__c.field-meta.xml
<CustomField>
    <fullName>Address_Kind__c</fullName>
    <label>Address Kind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OFFICIAL</fullName>
            </value>
            <value>
                <fullName>FORWARD_MAIL</fullName>
            </value>
            <value>
                <fullName>FOREIGN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>