force-app/main/default/objects/Valitive_Event__c/fields/Address_Lines__c.field-meta.xml
<CustomField>
    <fullName>Address_Lines__c</fullName>
    <label>Address Lines</label>
    <type>TextArea</type>
</CustomField>