force-app/main/default/objects/Valitive_Event__c/fields/Business_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Business_Category_Code__c</fullName>
    <label>Business Category Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>