force-app/main/default/objects/Valitive_Event__c/fields/Care_Of__c.field-meta.xml
<CustomField>
    <fullName>Care_Of__c</fullName>
    <label>Care Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>