force-app/main/default/objects/Valitive_Event__c/fields/Deceased_On__c.field-meta.xml
<CustomField>
    <fullName>Deceased_On__c</fullName>
    <label>Deceased On</label>
    <type>Date</type>
</CustomField>