force-app/main/default/objects/Valitive_Event__c/fields/Deceased_On_Month__c.field-meta.xml
<CustomField>
    <fullName>Deceased_On_Month__c</fullName>
    <label>Deceased On Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>