force-app/main/default/objects/Valitive_Event__c/fields/Deceased_On_Year__c.field-meta.xml
<CustomField>
    <fullName>Deceased_On_Year__c</fullName>
    <label>Deceased On Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>