force-app/main/default/objects/Valitive_Event__c/fields/Detected_At__c.field-meta.xml
<CustomField>
    <fullName>Detected_At__c</fullName>
    <label>Detected At</label>
    <type>DateTime</type>
</CustomField>