force-app/main/default/objects/Valitive_Event__c/fields/Event_Subject_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Subject_Type__c</fullName>
    <label>Event Subject Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PERSON</fullName>
            </value>
            <value>
                <fullName>ORGANIZATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>