force-app/main/default/objects/Valitive_Event__c/fields/Guarded_Since__c.field-meta.xml
<CustomField>
    <fullName>Guarded_Since__c</fullName>
    <label>Guarded Since</label>
    <type>Date</type>
</CustomField>