force-app/main/default/objects/Valitive_Event__c/fields/Guardianship_Type__c.field-meta.xml
<CustomField>
    <fullName>Guardianship_Type__c</fullName>
    <label>Guardianship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GUARDIANSHIP</fullName>
            </value>
            <value>
                <fullName>LIMITED_GUARDIANSHIP</fullName>
            </value>
            <value>
                <fullName>EXTENDED_GUARDIANSHIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>