force-app/main/default/objects/Valitive_Event__c/fields/Is_Primary_Business_Category__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Business_Category__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary Business Category</label>
    <type>Checkbox</type>
</CustomField>