force-app/main/default/objects/Valitive_Event__c/fields/Misc__c.field-meta.xml
<CustomField>
    <fullName>Misc__c</fullName>
    <label>Misc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>