force-app/main/default/objects/Valitive_Event__c/fields/New_KPI_Result_Value__c.field-meta.xml
<CustomField>
    <fullName>New_KPI_Result_Value__c</fullName>
    <label>New KPI Result Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>