force-app/main/default/objects/Valitive_Event__c/fields/Number_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Number_Suffix__c</fullName>
    <label>Number Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>