force-app/main/default/objects/Valitive_Event__c/fields/Old_Additional_Street_Info__c.field-meta.xml
<CustomField>
    <fullName>Old_Additional_Street_Info__c</fullName>
    <label>Old Additional Street Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>