force-app/main/default/objects/Valitive_Event__c/fields/Old_Address_Coord__c.field-meta.xml
<CustomField>
    <fullName>Old_Address_Coord__c</fullName>
    <label>Old Address Coord</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>