force-app/main/default/objects/Valitive_Event__c/fields/Old_Address_Kind__c.field-meta.xml
<CustomField>
    <fullName>Old_Address_Kind__c</fullName>
    <label>Old Address Kind</label>
    <length>255</length>
    <type>Text</type>
</CustomField>