force-app/main/default/objects/Valitive_Event__c/fields/Old_Address_Lines__c.field-meta.xml
<CustomField>
    <fullName>Old_Address_Lines__c</fullName>
    <label>Old Address Lines</label>
    <type>TextArea</type>
</CustomField>