force-app/main/default/objects/Valitive_Event__c/fields/Old_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Old_Address_Type__c</fullName>
    <label>Old Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RAW</fullName>
            </value>
            <value>
                <fullName>SE_NORMALIZED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>