force-app/main/default/objects/Valitive_Event__c/fields/Old_Care_Of__c.field-meta.xml
<CustomField>
    <fullName>Old_Care_Of__c</fullName>
    <label>Old Care Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>