force-app/main/default/objects/Valitive_Event__c/fields/Old_City__c.field-meta.xml
<CustomField>
    <fullName>Old_City__c</fullName>
    <label>Old City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>