force-app/main/default/objects/Valitive_Event__c/fields/Old_Country__c.field-meta.xml
<CustomField>
    <fullName>Old_Country__c</fullName>
    <label>Old Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>