force-app/main/default/objects/Valitive_Event__c/fields/Old_County__c.field-meta.xml
<CustomField>
    <fullName>Old_County__c</fullName>
    <label>Old County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>