force-app/main/default/objects/Valitive_Event__c/fields/Old_Entrance__c.field-meta.xml
<CustomField>
    <fullName>Old_Entrance__c</fullName>
    <label>Old Entrance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>