force-app/main/default/objects/Valitive_Event__c/fields/Old_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Old_FirstName__c</fullName>
    <label>Old FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>