force-app/main/default/objects/Valitive_Event__c/fields/Old_Flat__c.field-meta.xml
<CustomField>
    <fullName>Old_Flat__c</fullName>
    <label>Old Flat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>