force-app/main/default/objects/Valitive_Event__c/fields/Old_Floor__c.field-meta.xml
<CustomField>
    <fullName>Old_Floor__c</fullName>
    <label>Old Floor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>