force-app/main/default/objects/Valitive_Event__c/fields/Old_Gender__c.field-meta.xml
<CustomField>
    <fullName>Old_Gender__c</fullName>
    <label>Old Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MALE</fullName>
            </value>
            <value>
                <fullName>FEMALE</fullName>
            </value>
            <value>
                <fullName>BIGENDER</fullName>
            </value>
            <value>
                <fullName>UNDEFINED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>