force-app/main/default/objects/Valitive_Event__c/fields/Old_Given_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Given_Name__c</fullName>
    <label>Old Given Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>