force-app/main/default/objects/Valitive_Event__c/fields/Old_LastName__c.field-meta.xml
<CustomField>
    <fullName>Old_LastName__c</fullName>
    <label>Old LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>