force-app/main/default/objects/Valitive_Event__c/fields/Old_Legal_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Legal_Id__c</fullName>
    <label>Old Legal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>