force-app/main/default/objects/Valitive_Event__c/fields/Old_MiddleName__c.field-meta.xml
<CustomField>
    <fullName>Old_MiddleName__c</fullName>
    <label>Old MiddleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>