force-app/main/default/objects/Valitive_Event__c/fields/Old_Misc__c.field-meta.xml
<CustomField>
    <fullName>Old_Misc__c</fullName>
    <label>Old Misc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>