force-app/main/default/objects/Valitive_Event__c/fields/Old_Municipality__c.field-meta.xml
<CustomField>
    <fullName>Old_Municipality__c</fullName>
    <label>Old Municipality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>