force-app/main/default/objects/Valitive_Event__c/fields/Old_Number_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Old_Number_Suffix__c</fullName>
    <label>Old Number Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>