force-app/main/default/objects/Valitive_Event__c/fields/Old_Org_Status__c.field-meta.xml
<CustomField>
    <fullName>Old_Org_Status__c</fullName>
    <label>Old Org Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>