force-app/main/default/objects/Valitive_Event__c/fields/Old_Postbox__c.field-meta.xml
<CustomField>
    <fullName>Old_Postbox__c</fullName>
    <label>Old Postbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>