force-app/main/default/objects/Valitive_Event__c/fields/Old_Property_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Old_Property_Identifier__c</fullName>
    <label>Old Property Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>