force-app/main/default/objects/Valitive_Event__c/fields/Old_Street__c.field-meta.xml
<CustomField>
    <fullName>Old_Street__c</fullName>
    <label>Old Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>