force-app/main/default/objects/Valitive_Event__c/fields/Old_Zip__c.field-meta.xml
<CustomField>
    <fullName>Old_Zip__c</fullName>
    <label>Old Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>