force-app/main/default/objects/Valitive_Event__c/fields/Org_Contact_Party_Id__c.field-meta.xml
<CustomField>
    <fullName>Org_Contact_Party_Id__c</fullName>
    <label>Org Contact Party Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>