force-app/main/default/objects/Valitive_Event__c/fields/Organisation_Id__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Id__c</fullName>
    <label>Organisation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>