force-app/main/default/objects/Valitive_Event__c/fields/Organization_Legal_Id__c.field-meta.xml
<CustomField>
    <fullName>Organization_Legal_Id__c</fullName>
    <label>Organization Legal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>