force-app/main/default/objects/Valitive_Event__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <label>Period</label>
    <type>Date</type>
</CustomField>