force-app/main/default/objects/Valitive_Event__c/fields/Person_Id__c.field-meta.xml
<CustomField>
    <fullName>Person_Id__c</fullName>
    <label>Person Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>