force-app/main/default/objects/Valitive_Event__c/fields/Phone_Kind__c.field-meta.xml
<CustomField>
    <fullName>Phone_Kind__c</fullName>
    <label>Phone Kind</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MOBILE</fullName>
            </value>
            <value>
                <fullName>LANDLINE</fullName>
            </value>
            <value>
                <fullName>SWITCHBOARD</fullName>
            </value>
            <value>
                <fullName>OFFICIAL</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>