force-app/main/default/objects/Valitive_Event__c/fields/Postbox__c.field-meta.xml
<CustomField>
    <fullName>Postbox__c</fullName>
    <label>Postbox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>