force-app/main/default/objects/Valitive_Event__c/fields/Property_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Property_Identifier__c</fullName>
    <label>Property Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>