force-app/main/default/objects/Valitive_Event__c/fields/Registered_Since__c.field-meta.xml
<CustomField>
    <fullName>Registered_Since__c</fullName>
    <label>Registered Since</label>
    <type>Date</type>
</CustomField>