force-app/main/default/objects/Valitive_Event__c/fields/Since__c.field-meta.xml
<CustomField>
    <fullName>Since__c</fullName>
    <label>Since</label>
    <type>Date</type>
</CustomField>