force-app/main/default/objects/Valitive_Event__c/fields/Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Sync_Status__c</fullName>
    <label>Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Contact Sync</fullName>
                <default>true</default>
                <label>Awaiting Contact Sync</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Awaiting Manual Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>