force-app/main/default/objects/Valitive_Event__c/fields/Synced_To_Account_At__c.field-meta.xml
<CustomField>
    <fullName>Synced_To_Account_At__c</fullName>
    <label>Synced To Account At</label>
    <type>DateTime</type>
</CustomField>