force-app/main/default/objects/Valitive_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SE_PERSON_ADDR_CHANGED</fullName>
            </value>
            <value>
                <fullName>SE_PERSON_ADDR_CORRECTED</fullName>
            </value>
            <value>
                <fullName>SE_PERSON_DECEASED</fullName>
            </value>
            <value>
                <fullName>SE_PERSON_NAME_CHANGED</fullName>
            </value>
            <value>
                <fullName>PHONE_BOUND</fullName>
            </value>
            <value>
                <fullName>PHONE_UNBOUND</fullName>
            </value>
            <value>
                <fullName>PERSON_PROTECTION_ACTIVATED</fullName>
            </value>
            <value>
                <fullName>PERSON_PROTECTION_DEACTIVATED</fullName>
            </value>
            <value>
                <fullName>PERSON_LEGAL_ID_CHANGED</fullName>
            </value>
            <value>
                <fullName>PERSON_GENDER_CHANGED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>