force-app/main/default/objects/Valitive_Event__c/fields/Valid_Since__c.field-meta.xml
<CustomField>
    <fullName>Valid_Since__c</fullName>
    <label>Valid Since</label>
    <type>DateTime</type>
</CustomField>