force-app/main/default/objects/Valitive_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Person_Legal_Id__c</columns>
    <columns>Detected_At__c</columns>
    <columns>Timestamp__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>